--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -958,7 +958,14 @@
       "confirm_conversion": "Confirm Conversion",
       "conversion_message":"You are about to convert a quick quote to a normal quote",
       "convert_to_normal_quote": "Convert to normal quote",
-      "convert_to_policy":"Convert to Policy"
+      "convert_to_policy":"Convert to Policy",
+      "search_results": "Search Results",
+      "quotation_conversion": "Quotation Conversion",
+      "search_criteria": "Search Criteria",
+      "quotation_number": "Quotation Number",
+      "agent" : "Agent",
+      "status": "Status",
+      "no_data" : "No Data To Display"
   },
     "policy": {
       "underwriting_new_transaction": "Underwriting: new transaction",
