--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -902,7 +902,14 @@
       "confirm_conversion": "Confirmer la conversion",
       "conversion_message": "Vous êtes sur le point de convertir une cotation rapide en une cotation normale",
       "convert_to_normal_quote": "Convertir en cotation normale",
-      "convert_to_policy": "Convertir en police"
+      "convert_to_policy": "Convertir en police",
+      "quotation_conversion": "Conversion de devis",
+      "search_criteria": "Critères de recherche",
+      "search_results": "Résultats de recherche",
+      "quotation_number": "Numéro de devis",
+      "agent": "Agent",
+      "status": "Statut"
+
 
     },
     "policy": {
