--- a/src/assets/i18n/ke.json
+++ b/src/assets/i18n/ke.json
@@ -879,7 +879,13 @@
       "confirm_conversion": "Thibitisha ubadilishaji",
       "conversion_message": "Unakaribia kubadilisha nukuu ya haraka kuwa nukuu ya kawaida",
       "convert_to_normal_quote": "Badilisha kuwa nukuu ya kawaida",
-      "convert_to_policy": "Badilisha kuwa sera"
+      "convert_to_policy": "Badilisha kuwa sera",
+      "quotation_conversion": "Ubadilishaji wa nukuu",
+      "search_criteria": "Vigezo vya utafutaji",
+      "search_results": "Matokeo ya utafutaji",
+      "quotation_number": "Nambari ya nukuu",
+      "agent": "Wakala",
+      "status": "Hali"
 
     },
     "policy": {
