--- a/src/assets/i18n/ke.json
+++ b/src/assets/i18n/ke.json
@@ -885,7 +885,14 @@
       "search_results": "Matokeo ya utafutaji",
       "quotation_number": "Nambari ya nukuu",
       "agent": "Wakala",
-      "status": "Hali"
+      "status": "Hali",
+      "quotation_products": "Bidhaa za nukuu",
+      "merge_to_policy": "Unganisha na sera",
+      "start_date": "Tarehe ya kuanza",
+      "end_date": "Tarehe ya kumalizika",
+      "commission": "Tume",
+      "converted": "Imebadilishwa",
+      "policy_no": "Nambari ya sera"
 
     },
     "policy": {
