--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -886,7 +886,9 @@
       "end_date": "Enddatum",
       "commission": "Provision",
       "converted": "Umgewandelt",
-      "policy_no": "Policennummer"
+      "policy_no": "Policennummer",
+      "agent_id": "Agenten-ID",
+      "select_an_agent": "Wählen Sie einen Agenten aus"
 
     },
     "policy": {
