VQ-3299:Ability to Filter by Product(Quotation Inquiry)

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -974,7 +974,9 @@
       "converted": "Converted",
       "policy_no": "Policy no.",
       "agent_id": "Agent id",
-      "select_an_agent": "Select an agent"
+      "select_an_agent": "Select an agent",
+      "select_a_product":"Select a product",
+      "no_product_found":"No product found"
   },
     "policy": {
       "underwriting_new_transaction": "Underwriting: new transaction",
