--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -976,7 +976,8 @@
       "agent_id": "Agent id",
       "select_an_agent": "Select an agent",
       "select_a_product":"Select a product",
-      "no_product_found":"No product found"
+      "no_product_found":"No product found",
+      "search": "Search"
   },
     "policy": {
       "underwriting_new_transaction": "Underwriting: new transaction",
