--- a/src/assets/i18n/cn.json
+++ b/src/assets/i18n/cn.json
@@ -288,7 +288,17 @@
     "ranking": "排名",
     "agentName": "代理名称",
     "agentShortDesc": "代理简短描述",
-    "code": "代码"
+    "code": "代码",
+    "reportFormat": "报告格式",
+    "HTML": "HTML",
+    "PDF": "PDF",
+    "Excel": "Excel",
+    "Word": "Word",
+    "print": "打印",
+    "reportParams": "报告参数",
+    "serviceReqReport": "服务请求报告",
+    "sysReports": "系统报告",
+    "directDebitReports": "直接扣款报告"
   },
   "entities": {
     "account_number": "帐号",
