--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -174,16 +174,16 @@
     "FMS": "FMS",
     "General Ledger": "Grand livre",
     "Cashbook": "Livre de caisse",
-    "Creditors":"Créanciers",
-    "Debtors":"Débiteurs",
+    "Creditors": "Créanciers",
+    "Debtors": "Débiteurs",
     "Parameters": "Paramètres",
-        "Transactions": "Transactions",
-        "Invoices/Cr Notes": "Factures/Notes de Crédit",
-        "Invoices/DR Notes": "Factures/Notes de Débit",
-        "Inquiries": "Demandes",
-        "Requisitions": "Réquisitions",
-           "Gl-Final Reports": "Rapports Finaux du Grand Livre",
-        "Petty cash": "Petite Caisse",
+    "Transactions": "Transactions",
+    "Invoices/Cr Notes": "Factures/Notes de Crédit",
+    "Invoices/DR Notes": "Factures/Notes de Débit",
+    "Inquiries": "Demandes",
+    "Requisitions": "Réquisitions",
+    "Gl-Final Reports": "Rapports Finaux du Grand Livre",
+    "Petty cash": "Petite Caisse",
     "Cheques": "Chèques",
     "Cheque signing": "Signature de chèque",
     "Campaigns": "Campagnes",
@@ -217,34 +217,33 @@
     "Quotation Enquiry": "Demande de devis",
     "Quotation Sources": "Sources de devis",
     "Quotation Numbers": "Numéros de devis"
-
   },
   "shared": {
     "quotation_landing_screen": {
-        "new_quote": "Nouveau devis",
-        "filter_by": "Filtrer par",
-        "select_option": "Sélectionner une option",
-        "select_condition": "Sélectionner une condition",
-        "greater_than": "Plus grand que",
-        "less_than": "Moins que",
-        "equals": "Égale à",
-        "search": "Rechercher",
-        "range_from": "Plage de",
-        "range_to": "Plage à",
-        "enter_value": "Entrer une valeur",
-        "quotation_number": "N° de devis",
-        "product": "Produit",
-        "client": "Client",
-        "intermediary": "Intermédiaire",
-        "sum_assured": "Capital assuré",
-        "premium": "Prime",
-        "cover_from": "Couverture à partir de",
-        "cover_to": "Couverture jusqu'à",
-        "date_created": "Date de création",
-        "status": "Statut",
-        "action": "Action"
+      "new_quote": "Nouveau devis",
+      "filter_by": "Filtrer par",
+      "select_option": "Sélectionner une option",
+      "select_condition": "Sélectionner une condition",
+      "greater_than": "Plus grand que",
+      "less_than": "Moins que",
+      "equals": "Égale à",
+      "search": "Rechercher",
+      "range_from": "Plage de",
+      "range_to": "Plage à",
+      "enter_value": "Entrer une valeur",
+      "quotation_number": "N° de devis",
+      "product": "Produit",
+      "client": "Client",
+      "intermediary": "Intermédiaire",
+      "sum_assured": "Capital assuré",
+      "premium": "Prime",
+      "cover_from": "Couverture à partir de",
+      "cover_to": "Couverture jusqu'à",
+      "date_created": "Date de création",
+      "status": "Statut",
+      "action": "Action"
     }
-},
+  },
   "crm": {
     "activity": "Activité",
     "category": "Catégorie",
@@ -928,7 +927,14 @@
       "policy_no": "Numéro de police",
       "agent_id": "ID de l'agent",
       "select_an_agent": "Sélectionnez un agent",
-      "search" : "Rechercher"
+      "search": "Rechercher",
+      "quotation_inquiry": "Devis:Demande de devis",
+      "filter_by": "Filtrer par",
+      "clear_search": "Effacer la recherche",
+      "comments": "Commentaires",
+      "expiry_date": "Date d'expiration",
+      "transaction_date": "Date de transaction",
+      "revise_reuse_quotation": "Devis:Réviser/Réutiliser le devis"
     },
     "policy": {
       "underwriting_new_transaction": "Souscription : Nouvelle transaction",
@@ -1084,7 +1090,6 @@
       "premium": "Prime",
       "fee_rate": "Taux de Frais",
       "fee_amount": "Montant des Frais",
-
       "import_schedule": "Importer le calendrier",
       "from_csv_file": "Depuis le fichier CSV",
       "from_another_policy": "Depuis une autre police",
@@ -1162,7 +1167,6 @@
       "ref_no": "Numéro de référence",
       "risk_note": "Note de risque",
       "uw_year": "Année de souscription",
-
       "select_risk_clauses": "Sélectionner les clauses de risque",
       "peril": "Péril",
       "limit_description": "Description de la limite",
@@ -1171,7 +1175,6 @@
       "excess_type": "Type de franchise",
       "peril_id": "ID",
       "previous": "Précédent",
-
       "select_required_documents": "Sélectionner les documents requis",
       "edit_required_documents": "Modifier les documents requis",
       "certificates": "Certificats",
@@ -1207,7 +1210,6 @@
       "commission_amount": "Montant de la commission",
       "withholding_rate": "Taux de retenue",
       "code": "Code",
-
       "select_risk_peril": "Sélectionner le risque",
       "risk_service_list": "Liste des services de risque",
       "reassign": "Réaffecter",
@@ -1470,10 +1472,10 @@
         "beneficiary_details": "Détails du bénéficiaire",
         "benefit_proportion": "Proportion des bénéfices",
         "bmi": "Votre IMC",
-		    "body_mass_index": "Indice de Masse Corporelle (IMC)",
+        "body_mass_index": "Indice de Masse Corporelle (IMC)",
         "branch": "Agence",
         "branch_required": "L'agence est requise",
-        "cancel" : "Annuler",
+        "cancel": "Annuler",
         "choose_file": "Choisir un fichier",
         "citizenship": "Nationalité",
         "click_on_+_icon_to_add_record": "cliquez sur l'icône + pour ajouter un enregistrement",
@@ -1588,7 +1590,7 @@
         "relationship_trustee": "Relation (Fiduciaire)",
         "residence_country": "Pays de résidence",
         "risky_occupation": "Votre profession est-elle associée à un danger spécifique ou participez-vous à une activité, un sport, un passe-temps qui pourrait être dangereux ou impliquer un risque supplémentaire",
-        "save":"Enregistrer",
+        "save": "Enregistrer",
         "save_and_continue": "Enregistrer et continuer",
         "select_bank": "Sélectionner la banque",
         "select_bank_branch": "Sélectionner l'agence bancaire",
@@ -2620,32 +2622,30 @@
       "allocatedAmount": "Montant alloué",
       "cancel_receipt": "Annuler le Reçu"
     },
-
-      "receipt_authorization": {
-        "title": "Autorisation de reçus",
-        "normal_tab": "Reçus normaux",
-        "batch_tab": "Reçus en lot",
-        "select_all": "Sélectionner tout",
-        "authorize_all": "Autoriser tout",
-        "reject_all": "Rejeter tout",
-        "searchs":"Recherche",
-        "receipt_no": "Numéro de reçu",
-        "policy_no": "Numéro de police",
-        "payment_memo": "Mémo de paiement",
-        "amount": "Montant",
-        "capture_date": "Date de capture",
-        "authorization_date":"date d'autorisation",
-        "status": "Statut",
-        "actions":"Actions",
-        "authorize": "Autoriser",
-        "reject": "Rejeter",
-        "rejection_remarks": "Remarques de rejet",
-        "close": "Fermer",
-        "statement_no": "Numéro de relevé",
-        "total_amount": "Montant total",
-        "send_sms_alerts": "Envoyer des alertes SMS"
-      }
-
+    "receipt_authorization": {
+      "title": "Autorisation de reçus",
+      "normal_tab": "Reçus normaux",
+      "batch_tab": "Reçus en lot",
+      "select_all": "Sélectionner tout",
+      "authorize_all": "Autoriser tout",
+      "reject_all": "Rejeter tout",
+      "searchs": "Recherche",
+      "receipt_no": "Numéro de reçu",
+      "policy_no": "Numéro de police",
+      "payment_memo": "Mémo de paiement",
+      "amount": "Montant",
+      "capture_date": "Date de capture",
+      "authorization_date": "date d'autorisation",
+      "status": "Statut",
+      "actions": "Actions",
+      "authorize": "Autoriser",
+      "reject": "Rejeter",
+      "rejection_remarks": "Remarques de rejet",
+      "close": "Fermer",
+      "statement_no": "Numéro de relevé",
+      "total_amount": "Montant total",
+      "send_sms_alerts": "Envoyer des alertes SMS"
+    }
   },
   "campaignMngmt": {
     "campaigns": "Campagnes",
